intial commit of app

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -6,19 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %matplotlib inline\n",
-    "from matplotlib import style\n",
-    "style.use('dark_background')\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import datetime as dt\n",
-    "\n",
-    "import sqlalchemy\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
-    "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "# %matplotlib inline"
    ]
   },
   {
@@ -34,8 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
+    "# create engine to hawaii.sqlite\n"
    ]
   },
   {
@@ -54,12 +41,11 @@
    ],
    "source": [
     "# reflect an existing database into a new model\n",
-    "Base = automap_base()\n",
-    "# reflect the tables\n",
-    "Base.prepare(engine, reflect=True)\n",
     "\n",
-    "# View all of the classes that automap found\n",
-    "Base.classes.keys()"
+    "# reflect the tables\n",
+    "\n",
+    "\n",
+    "# View all of the classes that automap found"
    ]
   },
   {
